--- a/Evans Tucker's Resume.html
+++ b/Evans Tucker's Resume.html
@@ -103,6 +103,7 @@
 <div class="clear">
       <ul>
       <li>Built new dev and prod Kubernetes clusters based on Terraform EKS blueprints.</li>
+      <li>Deployed kube-prometheus-stack (including Grafana and Alertmanager), Loki, and Promtail for observability.</li>
       <li>Migrated several services to the new clusters.</li>
       <li>Wrote a GitOps repo to control application deployment with Helmfile and SOPS.</li>
       <li>Deployed CloudNativePG PostgreSQL databases to the clusters and migrated data to them.</li>
